# super-table

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  audit_report.json  audit_report.md  release.sh
.github/workflows/: python-publish.yml
examples/basics/: Cargo.toml
examples/basics/src/: main.rs
examples/python/: README.md  requirements.txt  showcase.py  unified_notebook.ipynb
examples/python/production_table/metadata/: v0.metadata.json  v1.metadata.json  v2.metadata.json  v3.metadata.json
examples/python/production_table/metadata/manifests/: manifest-1770102172020.avro.json  manifest-1770102172133.avro.json  manifest-1770102172241.avro.json
integrations/datafusion/: Cargo.toml
integrations/datafusion/src/: lib.rs  pruning.rs
integrations/spark/: README.md
integrations/spark/python/: supertable_spark.py
integrations/spark/src/main/scala/io/supertable/spark/: SuperTableRestClient.scala
spark-connector/: build.sbt
spark-connector/src/main/scala/io/supertable/spark/: SuperTableCatalog.scala  SuperTableSparkTable.scala
superaudit/: Cargo.toml
superaudit/src/: lib.rs
superbindings/: Cargo.toml  README.md  publish_pypi.sh  pyproject.toml
superbindings/python/supertable/: __init__.py  integrations.py  supertable.pyi
superbindings/src/: lib.rs  py_schema.rs  py_table.rs
supercatalog/: Cargo.toml
supercatalog/proto/: catalog.proto
supercatalog/src/: main.rs
supercli/: Cargo.toml  build.rs
supercli/src/: main.rs
supercore/: Cargo.toml
supercore/src/: action.rs  catalog.rs  cdc.rs  datafusion.rs  delete.rs  lib.rs  manifest.rs  merge.rs  metadata.rs  optimize.rs  partition.rs  polars.rs  reader.rs  scan.rs  schema.rs  statistics.rs  storage.rs  table.rs  transaction.rs  update.rs  validation.rs  writer.rs
supercore/src/writer/: delete_writer.rs  mod.rs  table_writer.rs
superfusion/: Cargo.toml
superfusion/src/: lib.rs
supernode/: Cargo.toml  package.json
supernode/src/: lib.rs
superrest/: Cargo.toml
superrest/src/: lib.rs
superrest/tests/: iceberg_compat.rs
