[workspace]
resolver = "3"
members = [
    "supercore",
    "supercatalog",
    "supercli",
    "superbindings",
    "integrations/datafusion",
    "superrest",
    "examples/basics",
    "superaudit",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/abrahimzaman360/super-table"
