[package]
name = "supertable-audit"
version = "0.1.0"
edition = "2024"
description = "Audit and reporting system for SuperTable"
license = "MIT OR Apache-2.0"
repository = "https://github.com/supertable-project/supertable"

[dependencies]
supercore = { package = "supertable-core", path = "../supercore", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
genpdf = "0.2"
tokio = { version = "1.49", features = ["full"] }
