[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pysupertable"
version = "0.1.1"
description = "Python bindings for SuperTable - the next-gen open table format"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT OR Apache-2.0"
authors = [{ name = "SuperTable Team", email = "abrahimzaman3@outlook.com" }]
urls = { Repository = "https://github.com/abrahimzaman360/super-table" }
keywords = ["table-format", "data-lake", "parquet", "arrow", "iceberg", "delta"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.optional-dependencies]
pandas = ["pandas>=1.0"]
pyarrow = ["pyarrow>=10.0"]
all = ["pandas>=1.0", "pyarrow>=10.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "supertable"
