[package]
name = "supertable-cli"
version.workspace = true
edition = "2024"
description = "Command-line interface for SuperTable"
license = "MIT OR Apache-2.0"
repository = "https://github.com/supertable-project/supertable"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
prost = "0.14.3"
supercore = { package = "supertable-core", version = "0.1.0", path = "../supercore" }
superaudit = { package = "supertable-audit", version = "0.1.0", path = "../superaudit" }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.14.3"
tonic-prost = "0.14.3"

[build-dependencies]
tonic-prost-build = "0.14.3"
