[package]
name = "supertable-core"
version.workspace = true
edition = "2024"
description = "Core library for SuperTable, a next-generation open table format"
license = "MIT OR Apache-2.0"
repository = "https://github.com/abrahimzaman360/super-table"
keywords = ["table-format", "iceberg", "arrow", "parquet"]
categories = ["database-implementations", "data-structures"]

[dependencies]
datafusion = { version = "52.1.0" }
anyhow = "1.0.100"
arrow = "57.2.0"
async-trait = "0.1.89"
bytes = "1.11.0"
chrono = { version = "0.4.43", features = ["serde"] }
futures = "0.3.31"
object_store = "0.13.1"
parquet = "57.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
tracing = "0.1.41"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.4"
polars = { version = "0.52", features = [
    "lazy",
    "fmt",
    "parquet",
    "timezones",
] }
