[package]
name = "supertable-node"
version = "0.1.0"
edition = "2024"
description = "Node.js bindings for SuperTable"
license = "MIT OR Apache-2.0"
repository = "https://github.com/supertable-project/supertable"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8.2", features = ["async"] }
napi-derive = "3.5.1"
supercore = { package = "supertable-core", version = "0.1.0", path = "../supercore" }
tokio = { version = "1.49.0", features = ["full"] }

[build-dependencies]
napi-build = "2.0"
